fixed wrapping and title of post

--- a/css/index.css
+++ b/css/index.css
@@ -114,7 +114,6 @@ footer {
 }
 .postlist-item {
   display: flex;
-  flex-wrap: wrap;
   align-items: baseline;
   counter-increment: start-from -1;
   line-height: 1.8;
